Vnvd/Antlr/VnvdParser.cs
// $ANTLR 3.2 Sep 23, 2009 12:02:23 Vnvd.g 2010-03-17 00:16:58

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;

using IDictionary	= System.Collections.IDictionary;
using Hashtable 	= System.Collections.Hashtable;

using Antlr.Runtime.Tree;

namespace 
	Vnvd.Antlr

{
public partial class VnvdParser : Parser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"COLON", 
		"SEMICOLON", 
		"LPAREN", 
		"RPAREN", 
		"COMMA", 
		"PERIOD", 
		"LCURLYBRACE", 
		"RCURLYBRACE", 
		"LBRACKET", 
		"RBRACKET", 
		"QUESTION", 
		"TILDE", 
		"DCOLON", 
		"ADDEVENT", 
		"REMEVENT", 
		"BECOMES", 
		"PLUS", 
		"MINUS", 
		"MULTIPLY", 
		"DIVISION", 
		"LE", 
		"LEQ", 
		"GE", 
		"GEQ", 
		"EQ", 
		"NEQ", 
		"AND", 
		"OR", 
		"LXOR", 
		"LAND", 
		"LOR", 
		"NOT", 
		"MOD", 
		"USING", 
		"NAMESPACE", 
		"CLASS", 
		"INTERFACE", 
		"NEW", 
		"STATIC", 
		"VOID", 
		"IF", 
		"THEN", 
		"ELSE", 
		"WHILE", 
		"FOR", 
		"ENUM", 
		"IN", 
		"RETURN", 
		"CONST", 
		"TRUE", 
		"FALSE", 
		"BASE", 
		"THIS", 
		"METHOD", 
		"IMETHOD", 
		"FIELD", 
		"CONSTRUCTOR", 
		"LOCAL", 
		"EXTENDS", 
		"IMPLEMENTS", 
		"FI", 
		"PRINT", 
		"READ", 
		"NULL", 
		"AS", 
		"IS", 
		"TRY", 
		"CATCH", 
		"CAREBOX", 
		"FINALLY", 
		"THROW", 
		"WRITE", 
		"PRIVATE", 
		"PUBLIC", 
		"PROTECTED", 
		"INTERNAL", 
		"ABSTRACT", 
		"VIRTUAL", 
		"OVERRIDE", 
		"INITONLY", 
		"PROGRAM", 
		"VARDECL", 
		"PARAMETER", 
		"ARGUMENT", 
		"SLIST", 
		"ENUMOPTION", 
		"FQUALIFIER", 
		"EQUALIFIER", 
		"MODIFIERS", 
		"EXPRBLOCK", 
		"USAGE", 
		"SCOPEEXPR", 
		"CAST", 
		"ARRAY", 
		"READVOID", 
		"WRITEVOID", 
		"ALIST", 
		"NEWARR", 
		"NEWARRELEMS", 
		"ARRELEMS", 
		"ARRELEM", 
		"SCONSTRUCTOR", 
		"ICATCH", 
		"CALLVIRT", 
		"CALL", 
		"LDFLD", 
		"LDSFLD", 
		"LDLITERAL", 
		"LDVIRTFTN", 
		"LDFTN", 
		"DONTLD", 
		"IDENTIFIER", 
		"NUMBER", 
		"STRING", 
		"CHAR", 
		"FLOAT", 
		"LETTER", 
		"DIGIT", 
		"QUOTED_CHARACTER", 
		"COMMENT", 
		"WS", 
		"LOWER", 
		"UPPER"
    };

    public const int CAST = 96;
    public const int LOR = 34;
    public const int INTERNAL = 79;
    public const int LDSFLD = 110;
    public const int LDFTN = 113;
    public const int WHILE = 47;
    public const int LETTER = 120;
    public const int MOD = 36;
    public const int CONST = 52;
    public const int CHAR = 118;
    public const int NEW = 41;
    public const int NOT = 35;
    public const int EOF = -1;
    public const int LBRACKET = 12;
    public const int RPAREN = 7;
    public const int DCOLON = 16;
    public const int LDLITERAL = 111;
    public const int USING = 37;
    public const int EQUALIFIER = 91;
    public const int PARAMETER = 86;
    public const int RETURN = 51;
    public const int THIS = 56;
    public const int DIVISION = 23;
    public const int BASE = 55;
    public const int VOID = 43;
    public const int GEQ = 27;
    public const int EQ = 28;
    public const int COMMENT = 123;
    public const int EXPRBLOCK = 93;
    public const int VIRTUAL = 81;
    public const int ARRAY = 97;
    public const int INITONLY = 83;
    public const int GE = 26;
    public const int IMETHOD = 58;
    public const int STATIC = 42;
    public const int PERIOD = 9;
    public const int PRIVATE = 76;
    public const int NULL = 67;
    public const int ELSE = 46;
    public const int NUMBER = 116;
    public const int CALLVIRT = 107;
    public const int SCONSTRUCTOR = 105;
    public const int SEMICOLON = 5;
    public const int LOCAL = 61;
    public const int TRY = 70;
    public const int NAMESPACE = 38;
    public const int FI = 64;
    public const int WS = 124;
    public const int READ = 66;
    public const int OR = 31;
    public const int FIELD = 59;
    public const int QUOTED_CHARACTER = 122;
    public const int LDFLD = 109;
    public const int CALL = 108;
    public const int LOWER = 125;
    public const int CATCH = 71;
    public const int FALSE = 54;
    public const int LAND = 33;
    public const int CONSTRUCTOR = 60;
    public const int THROW = 74;
    public const int UPPER = 126;
    public const int PROTECTED = 78;
    public const int CLASS = 39;
    public const int WRITEVOID = 99;
    public const int FOR = 48;
    public const int FLOAT = 119;
    public const int ABSTRACT = 80;
    public const int VARDECL = 85;
    public const int SCOPEEXPR = 95;
    public const int AND = 30;
    public const int ALIST = 100;
    public const int NEWARRELEMS = 102;
    public const int DONTLD = 114;
    public const int USAGE = 94;
    public const int LPAREN = 6;
    public const int IF = 44;
    public const int MODIFIERS = 92;
    public const int AS = 68;
    public const int THEN = 45;
    public const int IN = 50;
    public const int ARRELEM = 104;
    public const int IMPLEMENTS = 63;
    public const int MULTIPLY = 22;
    public const int COMMA = 8;
    public const int IS = 69;
    public const int IDENTIFIER = 115;
    public const int RCURLYBRACE = 11;
    public const int ARGUMENT = 87;
    public const int TILDE = 15;
    public const int SLIST = 88;
    public const int LXOR = 32;
    public const int PLUS = 20;
    public const int DIGIT = 121;
    public const int RBRACKET = 13;
    public const int LCURLYBRACE = 10;
    public const int NEWARR = 101;
    public const int ICATCH = 106;
    public const int ADDEVENT = 17;
    public const int BECOMES = 19;
    public const int MINUS = 21;
    public const int TRUE = 53;
    public const int PRINT = 65;
    public const int WRITE = 75;
    public const int COLON = 4;
    public const int ENUMOPTION = 89;
    public const int NEQ = 29;
    public const int ENUM = 49;
    public const int QUESTION = 14;
    public const int FINALLY = 73;
    public const int FQUALIFIER = 90;
    public const int OVERRIDE = 82;
    public const int ARRELEMS = 103;
    public const int REMEVENT = 18;
    public const int PROGRAM = 84;
    public const int INTERFACE = 40;
    public const int CAREBOX = 72;
    public const int EXTENDS = 62;
    public const int PUBLIC = 77;
    public const int METHOD = 57;
    public const int READVOID = 98;
    public const int LE = 24;
    public const int STRING = 117;
    public const int LDVIRTFTN = 112;
    public const int LEQ = 25;

    // delegates
    // delegators



        public VnvdParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public VnvdParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();

             
        }
        
    protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

    public ITreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set {
    	this.adaptor = value;
    	}
    }

    override public string[] TokenNames {
		get { return VnvdParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "Vnvd.g"; }
    }


    public class program_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "program"
    // Vnvd.g:155:1: program : ( import_stat )* ( namespace_decl )* EOF -> ^( PROGRAM ( import_stat )* ( namespace_decl )* ) ;
    public VnvdParser.program_return program() // throws RecognitionException [1]
    {   
        VnvdParser.program_return retval = new VnvdParser.program_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken EOF3 = null;
        VnvdParser.import_stat_return import_stat1 = default(VnvdParser.import_stat_return);

        VnvdParser.namespace_decl_return namespace_decl2 = default(VnvdParser.namespace_decl_return);


        object EOF3_tree=null;
        RewriteRuleTokenStream stream_EOF = new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_namespace_decl = new RewriteRuleSubtreeStream(adaptor,"rule namespace_decl");
        RewriteRuleSubtreeStream stream_import_stat = new RewriteRuleSubtreeStream(adaptor,"rule import_stat");
        try 
    	{
            // Vnvd.g:156:2: ( ( import_stat )* ( namespace_decl )* EOF -> ^( PROGRAM ( import_stat )* ( namespace_decl )* ) )
            // Vnvd.g:156:4: ( import_stat )* ( namespace_decl )* EOF
            {
            	// Vnvd.g:156:4: ( import_stat )*
            	do 
            	{
            	    int alt1 = 2;
            	    int LA1_0 = input.LA(1);

            	    if ( (LA1_0 == USING) )
            	    {
            	        alt1 = 1;
            	    }


            	    switch (alt1) 
            		{
            			case 1 :
            			    // Vnvd.g:156:4: import_stat
            			    {
            			    	PushFollow(FOLLOW_import_stat_in_program997);
            			    	import_stat1 = import_stat();
            			    	state.followingStackPointer--;
            			    	if (state.failed) return retval;
            			    	if ( (state.backtracking==0) ) stream_import_stat.Add(import_stat1.Tree);

            			    }
            			    break;

            			default:
            			    goto loop1;
            	    }
            	} while (true);

            	loop1:
            		;	// Stops C# compiler whining that label 'loop1' has no statements

            	// Vnvd.g:156:17: ( namespace_decl )*
            	do 
            	{
            	    int alt2 = 2;
            	    int LA2_0 = input.LA(1);

            	    if ( (LA2_0 == NAMESPACE) )
            	    {
            	        alt2 = 1;
            	    }


            	    switch (alt2) 
            		{
            			case 1 :
            			    // Vnvd.g:156:17: namespace_decl
            			    {
            			    	PushFollow(FOLLOW_namespace_decl_in_program1000);
            			    	namespace_decl2 = namespace_decl();
            			    	state.followingStackPointer--;
            			    	if (state.failed) return retval;
            			    	if ( (state.backtracking==0) ) stream_namespace_decl.Add(namespace_decl2.Tree);

            			    }
            			    break;

            			default:
            			    goto loop2;
            	    }
            	} while (true);

            	loop2:
            		;	// Stops C# compiler whining that label 'loop2' has no statements

            	EOF3=(IToken)Match(input,EOF,FOLLOW_EOF_in_program1003); if (state.failed) return retval; 
            	if ( (state.backtracking==0) ) stream_EOF.Add(EOF3);



            	// AST REWRITE
            	// elements:          namespace_decl, import_stat
            	// token labels:      
            	// rule labels:       retval
            	// token list labels: 
            	// rule list labels:  
            	// wildcard labels: 
            	if ( (state.backtracking==0) ) {
            	retval.Tree = root_0;
            	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

            	root_0 = (object)adaptor.GetNilNode();
            	// 157:2: -> ^( PROGRAM ( import_stat )* ( namespace_decl )* )
            	{
            	    // Vnvd.g:157:5: ^( PROGRAM ( import_stat )* ( namespace_decl )* )
            	    {
            	    object root_1 = (object)adaptor.GetNilNode();
            	    root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(PROGRAM, "PROGRAM"), root_1);

            	    // Vnvd.g:157:15: ( import_stat )*
            	    while ( stream_import_stat.HasNext() )
            	    {
            	        adaptor.AddChild(root_1, stream_import_stat.NextTree());

            	    }
            	    stream_import_stat.Reset();
            	    // Vnvd.g:157:28: ( namespace_decl )*
            	    while ( stream_namespace_decl.HasNext() )
            	    {
            	        adaptor.AddChild(root_1, stream_namespace_decl.NextTree());

            	    }
            	    stream_namespace_decl.Reset();

            	    adaptor.AddChild(root_0, root_1);
            	    }

            	}

            	retval.Tree = root_0;retval.Tree = root_0;}
            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "program"

    public class import_stat_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "import_stat"
    // Vnvd.g:160:1: import_stat : USING qualifier SEMICOLON -> ^( USING qualifier ) ;
    public VnvdParser.import_stat_return import_stat() // throws RecognitionException [1]
    {   
        VnvdParser.import_stat_return retval = new VnvdParser.import_stat_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken USING4 = null;
        IToken SEMICOLON6 = null;
        VnvdParser.qualifier_return qualifier5 = default(VnvdParser.qualifier_return);


        object USING4_tree=null;
        object SEMICOLON6_tree=null;
        RewriteRuleTokenStream stream_SEMICOLON = new RewriteRuleTokenStream(adaptor,"token SEMICOLON");
        RewriteRuleTokenStream stream_USING = new RewriteRuleTokenStream(adaptor,"token USING");
        RewriteRuleSubtreeStream stream_qualifier = new RewriteRuleSubtreeStream(adaptor,"rule qualifier");
        try 
    	{
            // Vnvd.g:161:2: ( USING qualifier SEMICOLON -> ^( USING qualifier ) )
            // Vnvd.g:161:4: USING qualifier SEMICOLON
            {
            	USING4=(IToken)Match(input,USING,FOLLOW_USING_in_import_stat1027); if (state.failed) return retval; 
            	if ( (state.backtracking==0) ) stream_USING.Add(USING4);

            	PushFollow(FOLLOW_qualifier_in_import_stat1029);
            	qualifier5 = qualifier();
            	state.followingStackPointer--;
            	if (state.failed) return retval;
            	if ( (state.backtracking==0) ) stream_qualifier.Add(qualifier5.Tree);
            	SEMICOLON6=(IToken)Match(input,SEMICOLON,FOLLOW_SEMICOLON_in_import_stat1031); if (state.failed) return retval; 
            	if ( (state.backtracking==0) ) stream_SEMICOLON.Add(SEMICOLON6);



            	// AST REWRITE
            	// elements:          qualifier, USING
            	// token labels:      
            	// rule labels:       retval
            	// token list labels: 
            	// rule list labels:  
            	// wildcard labels: 
            	if ( (state.backtracking==0) ) {
            	retval.Tree = root_0;
            	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

            	root_0 = (object)adaptor.GetNilNode();
            	// 162:2: -> ^( USING qualifier )
            	{
            	    // Vnvd.g:162:5: ^( USING qualifier )
            	    {
            	    object root_1 = (object)adaptor.GetNilNode();
            	    root_1 = (object)adaptor.BecomeRoot(stream_USING.NextNode(), root_1);

            	    adaptor.AddChild(root_1, stream_qualifier.NextTree());

            	    adaptor.AddChild(root_0, root_1);
            	    }

            	}

            	retval.Tree = root_0;retval.Tree = root_0;}
            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "import_stat"

    public class namespace_decl_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "namespace_decl"
    // Vnvd.g:165:1: namespace_decl : NAMESPACE qualifier LCURLYBRACE namespace_body RCURLYBRACE -> ^( NAMESPACE qualifier ( namespace_body )? ) ;
    public VnvdParser.namespace_decl_return namespace_decl() // throws RecognitionException [1]
    {   
        VnvdParser.namespace_decl_return retval = new VnvdParser.namespace_decl_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken NAMESPACE7 = null;
        IToken LCURLYBRACE9 = null;
        IToken RCURLYBRACE11 = null;
        VnvdParser.qualifier_return qualifier8 = default(VnvdParser.qualifier_return);

        VnvdParser.namespace_body_return namespace_body10 = default(VnvdParser.namespace_body_return);


        object NAMESPACE7_tree=null;
        object LCURLYBRACE9_tree=null;
        object RCURLYBRACE11_tree=null;
        RewriteRuleTokenStream stream_LCURLYBRACE = new RewriteRuleTokenStream(adaptor,"token LCURLYBRACE");
        RewriteRuleTokenStream stream_RCURLYBRACE = new RewriteRuleTokenStream(adaptor,"token RCURLYBRACE");
        RewriteRuleTokenStream stream_NAMESPACE = new RewriteRuleTokenStream(adaptor,"token NAMESPACE");
        RewriteRuleSubtreeStream stream_namespace_body = new RewriteRuleSubtreeStream(adaptor,"rule namespace_body");
        RewriteRuleSubtreeStream stream_qualifier = new RewriteRuleSubtreeStream(adaptor,"rule qualifier");
        try 
    	{
            // Vnvd.g:166:2: ( NAMESPACE qualifier LCURLYBRACE namespace_body RCURLYBRACE -> ^( NAMESPACE qualifier ( namespace_body )? ) )
            // Vnvd.g:166:4: NAMESPACE qualifier LCURLYBRACE namespace_body RCURLYBRACE
            {
            	NAMESPACE7=(IToken)Match(input,NAMESPACE,FOLLOW_NAMESPACE_in_namespace_decl1051); if (state.failed) return retval; 
            	if ( (state.backtracking==0) ) stream_NAMESPACE.Add(NAMESPACE7);
